# suflyor

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  NIGHT_RUN_PLAN.md  POST_MORTEM_v0034.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  UPGRADING.md  ci-warm-cache-canary.txt  deny.toml  eslint.config.js  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: AUTONOMOUS_RULES.md  settings.json
.claude/commands/: auto-stop.md  auto.md  release.md
.claude/hooks/: banned-phrases.ps1  block-asks.ps1  git-gate.ps1  plan-progress-check.ps1  stop-guard.ps1
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/scripts/: is-docs-only.sh  test-docs-only-detection.sh  test-gate-logic.sh
.github/workflows/: ci.yml  security.yml
docker/: README.md  static.Dockerfile  unit.Dockerfile
docs/: ADR-001-stack.md  ADR-002-license.md  AGENT_TASKS.md  CODEX_HANDOFF.md  GUIDE.md  I18N_PLAN.md  KICKOFF-SLINT-MIGRATION.md  MIGRATION-COMPLETION-PLAN.md  MIGRATION-PLAN-SLINT.md  PHASE-7-CUT-PLAN.md  PHASE-B2-RUNTIME-PORT-PLAN.md  PILOT-REPORT-SLINT.md  PLAN-resilience-v0.8.0.md  REVIEW_AGENT_PROMPT.md  SETTINGS_POLISH_PLAN.md  architecture.md  archive-panel-fixes.md  archive-panel-retest-v0.22.2.html  archive-panel-test-report.html  archive-panel-test-report.md  archive-panel-visual-checklist.md  archive-retest-v0.23.0.html  ci-docs-only-canary-2026-07-23.md  dependency-review-2026-07-09.md  design-review-2026-06-20.md  design-system-adoption-map.md  design-system.md  diarization-architecture.md  fable-brief-2026-07-04.md  fable-plan-2026-07-04.md  feature-requests.md  first-run-wizard-and-readiness-dashboard-concept.md  first-run-wizard-implementation-plan.md  follow-up-audit-v0.8.4.md  goal-deps-updates-2026-07-09.md  goal-fable-plan-2026-07-04.md  goal-hermes-inapp-install-2026-07-10.md  goal-hermes-integration-2026-07-09.md  goal-local-llm-evaluation-integration-2026-07-23.md  goal-local-llm-hardware-selection-2026-07-22.md  (+56 more)
integrations/hermes-plugin/: README.md  install.ps1
integrations/hermes-plugin/suflyor/: __init__.py  plugin.yaml
integrations/hermes-plugin/tests/: test_limits.py
overlay-backend/: Cargo.toml
overlay-backend/assets/: diag-chime.s16
overlay-backend/examples/: ai_probe.rs  stt_double.rs
overlay-backend/knowledge/: commands.md  glossary.md
overlay-backend/migrations/: 0001_session_catalog.sql  0002_fts.sql  0003_memory.sql  0004_utterance_audio_ms.sql  0005_memory_v2.sql  0006_diarization.sql
overlay-backend/src/: ai.rs  audio.rs  bridge.rs  components.rs  config.rs  conspect.rs  diar_install.rs  diarize.rs  download.rs  events.rs  health.rs  hermes_install.rs  http_log.rs  journal.rs  kb.rs  lib.rs  local_ai.rs  ocr.rs  ocr_install.rs  paths.rs  re_transcribe.rs  recorder.rs  runtime.rs  session_admin.rs  session_audio.rs  session_names.rs  stt.rs  summary_source.rs  tts.rs  tts_install.rs  tts_normalize.rs  update.rs  vision.rs
overlay-backend/src/config/: repair.rs  snippets.rs  tests.rs
overlay-backend/src/local_ai/: tests.rs
overlay-backend/src/memory/: candidates.rs  context_builder.rs  mod.rs  normalize.rs  summary_ref.rs
overlay-backend/src/persistence/: indexer.rs  maintenance.rs  migrations.rs  mod.rs  models.rs  sqlite_store.rs
overlay-backend/src/runtime/: tests.rs
overlay-backend/tests/: ai_eval.rs  archive_cycle.rs  hermes_plugin_smoke.rs
scripts/: README.md  build-slint-release.ps1  capture-reference-shots.ps1  ci.ps1  find_overlay_windows.ps1  gen_icon.ps1  get_hwnd_rect.ps1  get_tile_rect.ps1  git-gate-native.ps1  list_overlay_windows.ps1  probe_bar.ps1  screenshot_region.ps1  set_opacity.ps1  setup-local-ai.ps1  sim_click.ps1  slint-installer.nsi  visual_check.ps1
skills/manual-acceptance-html/: SKILL.md
skills/manual-acceptance-html/agents/: openai.yaml
slint-experiment/: Cargo.toml  build.rs
slint-experiment/assets/icons/: README.md
slint-experiment/scripts/: capture_primary.ps1  capture_window.ps1  click_at.ps1  hold_at.ps1  send_key.ps1  type_text.ps1
slint-experiment/src/: app_state.rs  capture.rs  lib.rs  logging.rs  main.rs  markdown.rs  replay_backend.rs  runtime_state.rs  session_namer.rs  slint_events.rs  slint_session.rs  win32.rs
slint-experiment/tests/: i18n_guard.rs  icon_guard.rs  settings_reset_guard.rs  version_guard.rs
slint-experiment/translations/ru/LC_MESSAGES/: slint-replay.po  slint_replay.po
slint-experiment/ui/: archive.slint  capture_overlay.slint  controls.slint  help.slint  index.slint  markdown_spike.slint  metrics.slint  overlay_bar.slint  overlay_spike.slint  palette.slint  recover_offer.slint  replay.slint  settings_panel.slint  text_ask.slint  theme.slint  tile.slint  tokens.slint  transcript.slint  wizard.slint
src/: Overlay.tsx  Replay.tsx  Settings.tsx  TileWindow.tsx  clock.test.ts  clock.ts  i18n.test.ts  i18n.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  tile.json
src-tauri/knowledge/: glossary.md  patterns.md
src-tauri/src/: ai.rs  audio.rs  config.rs  hotkeys.rs  journal.rs  kb.rs  lib.rs  main.rs  runtime.rs  screenshot.rs  stt.rs  tile.rs  tray.rs
src-tauri/tests/: copy_contract.rs
src/__tests__/: setup.ts
suflyor-tts/: Cargo.toml
suflyor-tts/src/: diar.rs  engine.rs  main.rs  playback.rs
tests/live-corpus/: README.md
tests/live-corpus/cases/001-devops-sysadmin-1h/: ground-truth.json
tests/live-corpus/cases/example/: ground-truth.json
tests/live-corpus/cases/raw/: QqF0656aBPc.srt  manifest.json
tests/live-corpus/cases/raw/QqF0656aBPc/: transcript.json  transcript.txt
tests/live-corpus/tools/: fetch-transcripts.py
