# Backend crate (no UI). Holds the shared modules — audio, stt, ai,
# journal, kb, config, runtime — consumed by the Slint overlay binary.

[package]
name = "overlay-backend"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shared backend for suflyor — audio, STT, AI, journal, KB, config, runtime"

[lib]
path = "src/lib.rs"

[dependencies]
# Serialization & config (shared by config, journal, kb, ai)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime + concurrency (shared by stt, ai, audio, journal)
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
parking_lot = "0.12"
once_cell = "1"

# HTTP (stt + ai)
reqwest = { version = "0.12", features = ["stream", "json", "multipart", "rustls-tls"], default-features = false }
bytes = "1"

# Local STT — GigaAM-v3 in-process via ONNX (Russian-specialised). The `ort`
# crate statically links the onnxruntime binary at build time. We enable
# `ort-directml` so GigaAM can run on the GPU via the DirectML execution
# provider (Windows, vendor-agnostic DX12 — works on Blackwell where CUDA
# version matrices bite). Accelerator is chosen at runtime via
# `stt::configure_gigaam_accelerator` (config `stt_gigaam_gpu`), defaulting to
# DirectML and falling back to CPU automatically when no GPU is available — so
# the int8 model stays ~22x real-time on CPU and ~7x faster again on the GPU.
# DirectML needs a real `DirectML.dll` at runtime (Windows ships one in
# System32 1903+; the release build copies it next to the exe).
# Local Whisper goes through the existing reqwest client (whisper.cpp server),
# so we deliberately DON'T enable the whisper-cpp feature (avoids a libclang
# build-dep on the whole project).
transcribe-rs = { version = "0.3.11", default-features = false, features = ["onnx", "ort-directml"] }

# Audio capture (audio.rs)
wasapi = "0.23"

# Filesystem paths (config, journal)
dirs = "6"

# Logging & errors
log = "0.4"
thiserror = "2"
anyhow = "1"

# SHA-256 — verify the downloaded updater installer against the GitHub release
# API digest before executing it (update.rs).
sha2 = "0.10"

[dev-dependencies]
hound = "3"
tempfile = "3"
# Drop-guard for test cleanup (bookmark_tests in journal.rs).
scopeguard = "1"
