# Backend crate (no UI). Holds the shared modules — audio, stt, ai,
# journal, kb, config, runtime — consumed by the Slint overlay binary.

[package]
name = "overlay-backend"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shared backend for suflyor — audio, STT, AI, journal, KB, config, runtime"

[lib]
path = "src/lib.rs"

[dependencies]
# Serialization & config (shared by config, journal, kb, ai)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime + concurrency (shared by stt, ai, audio, journal). Narrowed from
# "full" to exactly what this crate uses (security/supply-chain hygiene): spawn +
# spawn_blocking (rt-multi-thread), sync (mpsc/Semaphore), time (sleep), macros
# (#[tokio::test]). Deliberately NOT process/signal/fs/net — process spawning here
# goes through std::process::Command, and HTTP via reqwest (which pulls its own
# tokio net/io features at the binary level).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3"
parking_lot = "0.12"
once_cell = "1"

# HTTP (stt + ai)
reqwest = { version = "0.12", features = ["stream", "json", "multipart", "rustls-tls"], default-features = false }
bytes = "1"

# Local STT — GigaAM-v3 in-process via ONNX (Russian-specialised). The `ort`
# crate statically links the onnxruntime binary at build time. We enable
# `ort-directml` so GigaAM can run on the GPU via the DirectML execution
# provider (Windows, vendor-agnostic DX12 — works on Blackwell where CUDA
# version matrices bite). Accelerator is chosen at runtime via
# `stt::configure_gigaam_accelerator` (config `stt_gigaam_gpu`), defaulting to
# DirectML and falling back to CPU automatically when no GPU is available — so
# the int8 model stays ~22x real-time on CPU and ~7x faster again on the GPU.
# DirectML needs a real `DirectML.dll` at runtime (Windows ships one in
# System32 1903+; the release build copies it next to the exe).
# Local Whisper goes through the existing reqwest client (whisper.cpp server),
# so we deliberately DON'T enable the whisper-cpp feature (avoids a libclang
# build-dep on the whole project).
transcribe-rs = { version = "0.3.11", default-features = false, features = ["onnx", "ort-directml"] }

# Audio capture (audio.rs)
wasapi = "0.23"

# Filesystem paths (config, journal)
dirs = "6"

# Logging & errors
log = "0.4"
thiserror = "2"
anyhow = "1"

# SHA-256 — verify the downloaded updater installer against the GitHub release
# API digest before executing it (update.rs).
sha2 = "0.10"
rusqlite = { version = "0.40.0", features = ["bundled"] }

# WAV encode/decode (recorder.rs — session audio recording, v0.13.0). Was a
# dev-dep (STT test round-trip); promoted to a real dep now that recorder.rs
# writes the per-channel session WAVs at runtime. Tests still use it freely
# (a [dependencies] entry is visible to the test target too).
hound = "3"

[dev-dependencies]
tempfile = "3"
# Drop-guard for test cleanup (bookmark_tests in journal.rs).
scopeguard = "1"

[lints.clippy]
# Tier 3 lint baseline — mirrors slint-experiment. These restriction lints are
# allow-by-default, so `clippy -- -D warnings` (the git-gate) does NOT catch a
# panicking unwrap/expect/panic! in backend code unless they're denied here.
# `deny` (not `forbid`) so `#[cfg(test)]` modules can opt back in with an inner
# `#![allow(...)]` for terse test assertions.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
