# Backend crate (no UI). Holds the shared modules — audio, stt, ai,
# journal, kb, config, runtime — consumed by the Slint overlay binary.

[package]
name = "overlay-backend"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"
description = "Shared backend for suflyor — audio, STT, AI, journal, KB, config, runtime"

[lib]
path = "src/lib.rs"

[dependencies]
# Serialization & config (shared by config, journal, kb, ai)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime + concurrency (shared by stt, ai, audio, journal). Narrowed from
# "full" to exactly what this crate uses (security/supply-chain hygiene): spawn +
# spawn_blocking (rt-multi-thread), sync (mpsc/Semaphore), time (sleep), macros
# (#[tokio::test]). Deliberately NOT process/signal/fs/net — process spawning here
# goes through std::process::Command, and HTTP via reqwest (which pulls its own
# tokio net/io features at the binary level).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3"
parking_lot = "0.12"
once_cell = "1"

# HTTP (stt + ai)
reqwest = { version = "0.13", features = ["stream", "json", "multipart", "rustls"], default-features = false }
bytes = "1"

# Local STT — GigaAM-v3 in-process via ONNX (Russian-specialised). The `ort`
# crate statically links the onnxruntime binary at build time. We enable
# `ort-directml` so GigaAM can run on the GPU via the DirectML execution
# provider (Windows, vendor-agnostic DX12 — works on Blackwell where CUDA
# version matrices bite). Accelerator is chosen at runtime via
# `stt::configure_gigaam_accelerator` (config `stt_gigaam_gpu`), defaulting to
# DirectML and falling back to CPU automatically when no GPU is available — so
# the int8 model stays ~22x real-time on CPU and ~7x faster again on the GPU.
# DirectML needs a real `DirectML.dll` at runtime (Windows ships one in
# System32 1903+; the release build copies it next to the exe).
# Local Whisper goes through the existing reqwest client (whisper.cpp server),
# so we deliberately DON'T enable the whisper-cpp feature (avoids a libclang
# build-dep on the whole project).
transcribe-rs = { version = "0.3.11", default-features = false, features = ["onnx", "ort-directml"] }

# Audio capture (audio.rs)
wasapi = "0.23"

# Text-to-speech (tts.rs, read-aloud feature) — Windows SAPI 5 ISpVoice via the
# official Win32 binding, feature-gated to just the Speech + COM namespaces it
# needs. ISpVoice gives engine-level async speak + PAUSE/RESUME + live SetRate +
# voice enumeration (incl. OneCore "Irina"); chosen over the `tts` crate (whose
# WinRT backend can't pause/resume). Same 0.62 the slint binary already links.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Speech",
    # Job Object so spawned local-AI servers (llama-server / whisper) are killed
    # when THIS process dies — even via TerminateProcess (Task Manager / an
    # in-place upgrade) — instead of orphaning a server that squats :8080.
    # JobObjects needs Threading (JOBOBJECT_EXTENDED_LIMIT_INFORMATION) + Security
    # (CreateJobObjectW's SECURITY_ATTRIBUTES) — declared explicitly so the build
    # doesn't depend on another dep (wasapi) happening to enable them.
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
] }

# Neural TTS (read-aloud) runs in the `suflyor-tts` SIDECAR process — sherpa-onnx
# is deliberately NOT linked here. It bundles its own onnxruntime, which crashes
# natively when static-linked into the same binary as the `ort`/GigaAM STT
# runtime above (two onnxruntimes collide on the 2nd model load). This crate only
# needs base64 to frame text for the sidecar's stdin command protocol.
base64 = "0.22"

# Filesystem paths (config, journal)
dirs = "6"

# Logging & errors
log = "0.4"
thiserror = "2"
anyhow = "1"

# SHA-256 — verify the downloaded updater installer against the GitHub release
# API digest before executing it (update.rs).
sha2 = "0.10"
rusqlite = { version = "0.40.0", features = ["bundled"] }

# WAV encode/decode (recorder.rs — session audio recording, v0.13.0). Was a
# dev-dep (STT test round-trip); promoted to a real dep now that recorder.rs
# writes the per-channel session WAVs at runtime. Tests still use it freely
# (a [dependencies] entry is visible to the test target too).
hound = "3"
tiny_http = "0.12"
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"
# Drop-guard for test cleanup (bookmark_tests in journal.rs).
scopeguard = "1"

[lints.clippy]
# Tier 3 lint baseline — mirrors slint-experiment. These restriction lints are
# allow-by-default, so `clippy -- -D warnings` (the git-gate) does NOT catch a
# panicking unwrap/expect/panic! in backend code unless they're denied here.
# `deny` (not `forbid`) so `#[cfg(test)]` modules can opt back in with an inner
# `#![allow(...)]` for terse test assertions.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
