# Phase 0 pilot crate — standalone (NOT a workspace member of src-tauri/).
# Rationale: src-tauri/Cargo.toml is a standalone package, not a workspace.
# Converting it to a workspace mid-pilot would risk the existing build.
# This crate sits as a sibling at the repo root and compiles independently.
# If the pilot greenlights Phase 1, the repo gets restructured then.
[package]
name = "slint-replay"
version = "0.1.0"
edition = "2021"
description = "Phase 0 Slint pilot — port of the Replay viewer for stack evaluation"
publish = false

[lib]
name = "slint_replay"
path = "src/lib.rs"

[[bin]]
name = "slint-replay"
path = "src/main.rs"

# Phase 0.5 spike: transparent always-on-top overlay via HWND-poking.
# Validates that WS_EX_LAYERED / WS_EX_TRANSPARENT / WS_EX_TOOLWINDOW
# survive Slint+winit+skia composition. Hard blocker — if this fails,
# the migration loses its main reason-for-being (WebView2 fix).
[[bin]]
name = "overlay-spike"
path = "src/bin/overlay_spike.rs"

# Phase 0.5 spike 3: pulldown-cmark → Slint Text/StyledText walker.
# Plan's #1 risk. Validates feasibility of Phase 4's tile-markdown
# rendering. Spike scope: headings + paragraphs + bullet lists +
# code blocks (no syntect colors yet — that's Phase 4 proper).
[[bin]]
name = "markdown-spike"
path = "src/bin/markdown_spike.rs"

# Phase 1 Day 2: multi-window manager. Single Arc<Mutex<AppState>>
# shared across overlay bar + N tile windows + settings window.
# Each window applies the win32::make_transparent_overlay /
# set_always_on_top / set_stealth helpers as appropriate.
[[bin]]
name = "overlay-host"
path = "src/bin/overlay_host.rs"

[build-dependencies]
# Compiles ui/*.slint into Rust at build time. include_modules!() in
# src/main.rs pulls the generated code in.
slint-build = "1.16"

[dependencies]
# Default features include the winit + skia backends, which on Windows
# need no system deps (no GTK/X11). `raw-window-handle-06` exposes the
# native HWND so the overlay-spike binary can call Win32 SetWindowLongPtrW
# directly.
slint = { version = "1.16", features = ["raw-window-handle-06"] }

# Journal data layer (Day 2). serde_json parses the per-line JSONL
# events; dirs resolves %APPDATA%; anyhow gives Context-friendly errors.
# These three are already deps of src-tauri so no new third-party risk.
serde_json = "1"
dirs = "5"
anyhow = "1"

# Phase C — async runtime for AI calls. overlay_backend::ai functions
# are async and need a tokio runtime. multi-threaded so the AI HTTP
# call doesn't starve the UI event loop.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Phase 0.5 overlay-spike: raw HWND + Win32 calls. Same versions
# src-tauri uses (tauri 2.x ships windows 0.61/0.62 internally), so no
# new third-party deps in the workspace.
raw-window-handle = "0.6"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
] }

# Phase 0.5 MCP spike: per docs.rs/i-slint-backend-testing 1.16, the
# `mcp` feature actually belongs on `i-slint-backend-selector` (the
# crate that wires Slint's runtime backend), not on the testing crate.
# Slint pulls i-slint-backend-selector transitively; declaring it as a
# direct dep with `mcp` enables the server via cargo feature unification.
# With this enabled, setting SLINT_EMIT_DEBUG_INFO=1 + SLINT_MCP_PORT=N
# at runtime starts an MCP server listening on N.
i-slint-backend-selector = { version = "=1.16.1", features = ["mcp"] }

# Phase 0.5 markdown spike: CommonMark + GFM parser. Already a transitive
# dep of slint-build, so no new third-party risk.
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

# Phase D2 — global F4 hotkey. global-hotkey is maintained by the
# tauri-apps org (Tauri itself uses it). Provides a thread-safe
# event channel that UI code can poll from a Slint Timer.
global-hotkey = "0.6"

# Phase B1 — overlay-backend Tauri-free crate. Holds the 7 modules
# (audio/stt/ai/journal/kb/screenshot/config) + health.rs. Both
# src-tauri (legacy) and this crate consume them.
[dependencies.overlay-backend]
path = "../overlay-backend"

[dev-dependencies]
# i-slint-backend-testing is the OFFICIAL test framework (not
# "slint-testing"). The MCP server does NOT live here — Phase 0.5 spike
# 2 confirmed the `mcp` feature actually belongs on
# `i-slint-backend-selector` (a [dependencies] entry above). With that
# enabled, running the live binary with SLINT_EMIT_DEBUG_INFO=1 +
# SLINT_MCP_PORT=N starts the embedded MCP server at
# http://127.0.0.1:N/mcp. Claude Code (any MCP-capable agent) can then
# inspect the UI tree, take screenshots, click, and type — replaces
# visual_check.ps1 + computer-use.
i-slint-backend-testing = "1.16"

[lints.clippy]
# Mirror src-tauri/src/lib.rs (Tier 3 baseline). `deny` (not `forbid`) so
# Slint's generated code can use the inner `#[allow(...)]` it needs — the
# VTable macros emit `unsafe` blocks that `forbid` cannot tolerate.
# `unsafe_code = "forbid"` deliberately omitted: the slint-build output
# requires unsafe and there's no way around it.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
