[package]
name = "overlay-mvp"
version = "0.0.23"
description = "Minimal AI meeting overlay"
authors = ["x3d_mutant"]
edition = "2021"
# Without this, `cargo run` (used by `tauri dev`) can't pick between the
# overlay-mvp app binary and the journal-eval CLI. Set the app as default.
default-run = "overlay-mvp"

[lib]
name = "overlay_mvp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri core ---
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
# Prevents 2+ overlay-mvp processes running simultaneously — orphan would
# hold global hotkeys and the new instance would silently fail to register
# F3/F4/F8/F9 etc. (regression caught live 2026-05-25).
tauri-plugin-single-instance = "2"
# Native file picker dialog. Replaces "type the path manually" prompt in
# Settings → Import config flow (which broke on Russian Windows where the
# user's Desktop is localised, and was generally awful UX). v0.0.17.
tauri-plugin-dialog = "2"

# --- Serialization & config ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Async runtime + concurrency ---
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
parking_lot = "0.12"
once_cell = "1"

# --- HTTP client (Groq STT + Claude proxy streaming) ---
reqwest = { version = "0.12", features = ["stream", "json", "multipart", "rustls-tls"], default-features = false }
bytes = "1"
base64 = "0.22"

# --- Audio capture (WASAPI loopback + microphone on Windows) ---
wasapi = "0.23"

# --- Screenshot capture (cross-platform) ---
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# --- Filesystem paths ---
dirs = "5"

# --- Logging & errors ---
log = "0.4"
env_logger = "0.11"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
# WAV reader for roundtrip integration test
hound = "3"
tempfile = "3"
